# haskell-frex

./: LICENSE  Makefile  README.md  frex.cabal
.github/workflows/: test.yml
src/Data/: BoolRing.hs  CGroup.hs  CMonoid.hs  Coproduct.hs  DLattice.hs  PartiallyStatic.hs  Ring.hs
src/Data/Coproduct/: Classes.hs  Instances.hs
test/: All.hs  CodeComparison.hs  Datatypes.hs  InstanceLifting.hs  IsDigit.hs  LinAlg.hs  Power.hs  Printf.hs  Test.hs
